<resources>
    <string name="app_name">Quiz App</string>
    <string name="username">"Username"</string>
    <string name="password">"Password"</string>
    <string name="signin">"Sign In"</string>
    <string name="login">"Login"</string>
    <string name="forgotpassword"><u>Forgot Password</u></string>
    <string name="registernow"><u>Register Now</u></string>
    <string name="d_h_accnt">"Don't have an account?"</string>
</resources>
