<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/assets_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/quiz_app">
        </ImageView>
    <TextView
        android:visibility="invisible"
        android:id="@+id/text_quiz"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/assets_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_color1"
        android:textSize="@dimen/text_size_24"
        android:text="@string/app_name" />
        <TextView
            android:id="@+id/text_username"
            android:layout_marginTop="@dimen/activity_vertical_margin28"
            android:layout_marginLeft="@dimen/activity_horizontal_margin28"
            android:layout_marginRight="@dimen/activity_horizontal_margin28"
            android:layout_below="@id/text_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color1"
            android:textSize="@dimen/text_size_14"
            android:text="@string/username" />
        <EditText
            android:id="@+id/edit_text_username"
            android:layout_marginLeft="@dimen/activity_horizontal_margin28"
            android:layout_marginRight="@dimen/activity_horizontal_margin28"
            android:layout_below="@id/text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color1"
            android:textSize="@dimen/text_size_14"
            android:hint="Enter your email"/>
        <TextView
            android:id="@+id/text_password"
            android:layout_marginTop="@dimen/activity_vertical_margin18"
            android:layout_marginLeft="@dimen/activity_horizontal_margin28"
            android:layout_marginRight="@dimen/activity_horizontal_margin28"
            android:layout_below="@id/edit_text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color1"
            android:textSize="@dimen/text_size_14"
            android:text="@string/password" />
        <EditText
            android:id="@+id/edit_text_password"
            android:layout_marginLeft="@dimen/activity_horizontal_margin28"
            android:layout_marginRight="@dimen/activity_horizontal_margin28"
            android:layout_below="@id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color1"
            android:textSize="@dimen/text_size_14"
            android:hint="Enter your password"/>
        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/forgotpassword"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_vertical_margin28"
            android:layout_below="@id/edit_text_password"
            android:textAllCaps="false"
            android:textColor="@color/text_color1" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_below="@id/btn_forgot_password"
            android:layout_marginLeft="@dimen/activity_horizontal_margin28"
            android:layout_marginRight="@dimen/activity_horizontal_margin28"
            android:background="#ffff00"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/text_size_16"
            android:textColor="@android:color/black" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/text_d_n_acct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin28"
            android:text="@string/d_h_accnt"
            android:textAllCaps="false"
            android:textColor="@color/text_color1" />
        <Button
            android:id="@+id/btn_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginBottom="@dimen/activity_vertical_margin28"
            android:text="@string/registernow"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/text_d_n_acct"
            android:textColor="@color/text_color1" />
    </RelativeLayout>
</RelativeLayout>